cleaning up a little

--- a/code/style.css
+++ b/code/style.css
@@ -218,10 +218,7 @@ body {
     height: 20vh;
   }
 
-
-
 }
-
 
 .navbar {
   display: flex;
@@ -246,7 +243,6 @@ body {
   align-self: center;
   justify-self: center;
 }
-
 
 .navbar-link {
   padding: 10px;
@@ -293,6 +289,8 @@ body {
 
 }
 
+/* this is for giving the news-grid items alternating background colors */
+
 /* .news-grid-item:nth-child(even) {background-color: lightgray} */
 /* .news-grid-item:nth-child(odd) {background-color: white} */
 
@@ -322,7 +320,6 @@ body {
   box-shadow: 5px 5px 5px lightgray;
   cursor: pointer;
 }
-
 
 .title {
   font-weight: bold;
