--- a/code/style.css
+++ b/code/style.css
@@ -171,17 +171,25 @@ h1 {
 }
   
  .grid-container{
-  display: block;
+  display: grid;
+  margin: 100px 200px;
+  
+  
   
 
   
  }
 
 .news-grid {
-  display:grid;
+  display:inline-grid;
   /* grid-template-columns: repeat(4, 1fr); */
   grid-template-columns: 25% 25% 25% 25%;
-  margin: 100px 200px;
+  margin: 100px;
+  align-items: center;
+  justify-content: center;
+  
+ 
+  
   
   
   
@@ -197,6 +205,12 @@ h1 {
   grid-template-columns: repeat(1, 1fr);
 }
    */
+
+.news-item{
+  align-items: center;
+  justify-content: center;
+  
+}
    
 .news-item:hover {
   border: 1px solid #0066FF;
@@ -208,11 +222,8 @@ h1 {
 .news-item-image{
   width: 350px;
   height: 350px;
-  object-fit: cover;
-  
-  
-  
-  
+  object-fit: cover; 
+    
 }
 
 .news-item-caption{
