html structure and css font-family added

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+}
+
 html {
-  background: #0025ff;
-  color: #fff;
+  background: rgba(233, 230, 230, 0);
+  color: black;
+  font-family: "Inconsolata", monospace;
 }
