--- a/code/style.css
+++ b/code/style.css
@@ -1,34 +1,73 @@
 
 header{
-  background:#dfbf9f;
+  background:#5e4934;
+  border: 5px solid #ffe5cc;
+}
+
+.head-grid{
+  display: grid;
+  grid-template-columns: [first] 125px [line2] auto [line3] 300px [end]; 
+  grid-template-rows: repeat(2,100px);
+  column-gap: 5px;
+}
+  
+.head-child{
+   text-shadow: 2px 2px 4px black;
+}
+
+.icon{
+  place-self: center;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  grid-column-start:1;
+  grid-column-end:2;
 }
 
 .logo{
   width: 75px;
   height: 75px;
-  border: 5px solid black;
-  }
+  border:5px solid #ffe5cc;
+  border-radius: 25%;
+}
+
+.title{
+  grid-column: 2/4;
+  justify-self: start;
+}
+
+.subtitle{
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column: 2/3;
+  justify-self: start;
+}
+
+.search{
+  grid-row: 2;
+  grid-column: 3/4;
+  justify-self: start;
+  align-self: start;
+}
 
 h1{
-  font-size:30px;
   font-family: monaco;
-  }
+  color: #ffe5cc;
+  font-size: 50px;
+}
 
 h2{
-  font-size: 15px;
   font-family: monaco;
-  }
-
-.head-grid{
-  display: grid;
-  grid-template-columns: repeat(4,1fr);
-  grid-template-rows: repeat(2,100px);
-  gap: 10px;
+  color: #ffe5cc;
+  font-size: 15px;
 }
 
-.head-child{
-  background: white;
+input[type=text] {
+  width: 200px;
+  font-family: monaco;
+  border: 5px solid #ffe5cc;
+  border-radius: 5px;
 }
+
 
 .big-photo{
   height: 300px;
