--- a/code/style.css
+++ b/code/style.css
@@ -4,70 +4,99 @@ header{
   border: 5px solid #ffe5cc;
 }
 
-.head-grid{
+.header-parent{
   display: grid;
-  grid-template-columns: [first] 125px [line2] auto [line3] 300px [end]; 
-  grid-template-rows: repeat(2,100px);
-  column-gap: 5px;
+  gap: 10px;
+  grid-template-columns: 10% 40% 40%;
+  grid-template-rows: [row1-start] 70% [row1-end] 30%;
 }
   
-.head-child{
-   text-shadow: 2px 2px 4px black;
-}
+.header-child{
+  display: grid;
+  text-shadow: 2px 2px 4px black;
+  }
 
 .icon{
-  place-self: center;
   grid-row-start: 1;
-  grid-row-end: 3;
-  grid-column-start:1;
-  grid-column-end:2;
-}
+  grid-row-end: 2;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  }
 
-.logo{
-  width: 75px;
-  height: 75px;
-  border:5px solid #ffe5cc;
+.icon-img{
+  width: 50%;
+  border: 5px solid #ffe5cc;
   border-radius: 25%;
-}
+  place-self: center;
+  }
 
 .title{
   grid-column: 2/4;
-  justify-self: start;
-}
-
-.subtitle{
-  grid-row-start: 2;
-  grid-row-end: 3;
-  grid-column: 2/3;
-  justify-self: start;
-}
-
-.search{
-  grid-row: 2;
-  grid-column: 3/4;
-  justify-self: start;
-  align-self: start;
+  grid-row: 1/2;
+  align-self: center;
 }
 
 h1{
   font-family: monaco;
   color: #ffe5cc;
   font-size: 50px;
+  margin: 0;
+  padding: 0;
 }
 
 h2{
   font-family: monaco;
   color: #ffe5cc;
   font-size: 15px;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 5px;
 }
 
+.navbar{
+  grid-row: 2/3;
+  grid-column: 1/3;
+  }
+
+ul{
+  list-style-type:none;
+  font-family: monaco;
+  color: #ffe5cc;
+  font-size: 15px;
+  padding: 0;
+  margin:0;
+}
+
+li{
+  float:left;
+}
+
+li a {
+  margin: 10px 15px;
+  color: #ffe5cc;
+}
+
+a:link {
+  text-decoration: none;
+ }
+
+a:hover {
+  color: lightblue;
+}
+
+.search{
+  grid-row: 2/3;
+  grid-column: 3/4;
+  justify-self: end;
+  }
+
 input[type=text] {
-  width: 200px;
   font-family: monaco;
   border: 5px solid #ffe5cc;
   border-radius: 5px;
-}
-
+  margin-bottom: 20px;
+  width: 100%;
+  }
 
 .big-photo{
   height: 300px;
