--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,96 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #a6a8b3;
+  color: #000000;
+}
+@media (min-width: 667px) and (max-width: 1024px) {
+  h1, h2, h3 {
+    font-size: 80%;
+  }
+  .grid-container {
+    grid-template-columns: 1fr 1fr;
+    gap: 10px; 
+  }
+  img {
+    width: 40%
+  }
+  .text-wrapper {
+    margin-left: 5px;
+  }
+  p {
+    font-size: 80%;
+  } 
+}
+@media (min-width: 1024px) {
+  h2, h3 {
+    font-size: 100%;
+  }
+  .grid-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 15px;
+    background-color: purple;
+  }
+  img {
+    width: 100%;
+  }
+  .text-wrapper {
+    margin-left: 10px;
+  }
+  p {
+    font-size: 100%;
+  }
+}
+.grid-container {
+  display: grid;
+  gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+h1 {
+  font-family: 'Literata', serif;
+  font-size: 300%;
+  margin: 0;
+}
+h2, h3 {
+  font-family: 'Literata', serif;
+  margin: 0
+}
+.news-item {
+  display: grid;
+  gap: 10px;
+  padding: 10px;
+  background-color:antiquewhite;
+}
+.articleimg {
+  display: flex;
+  flex-direction: row;
+}
+.big-news {
+  background-color: blue;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.text-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 20px;
+}
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+li {
+  display: flex;
+  flex-wrap: wrap;
+}
+ul {
+  font-family: 'Arimo', sans-serif;
+  font-variant: small-caps;
+}
+p {
+  font-family: 'Arimo', sans-serif;
+  font-size: 80%
 }
