--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,69 @@
-html {
-  background: #0025ff;
-  color: #fff;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  text: verdana;
+  font-style: italic;
+  color: rgb(192, 43, 43);
+  font-size:x-large;
+  margin-left: 30px;
+  display: flex;
+  align-items: center;
+}
+
+nav {
+    width: 100%;
+    height: 16vh;
+    background-color: #f6eb47;
+    display:inline-flex;
+    padding: 10px 10px 10px 10px;
+}
+
+img {
+  height: auto;
+  width: 100%;
+  cursor: pointer;
+  margin: 0px;
+}
+
+
+.list {
+  display:flex;
+  justify-content:right;
+  list-style:none;
+  align-items:center;
+  font-size: 30px;
+  font-style: verdana;
+}
+
+
+a {
+  text-decoration:none;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content:space-evenly;
+}
+
+.cta {
+  text-decoration: none;
+  font-size: 20px;
+  font-style: verdana;
+  cursor: pointer;
+}
+
+
+.flex-parent {
+  border: 10px solid white;
+  display: flex;
+  height: 80px;
+  width: 320px;
+}
+
+.flex-child-image {
+  width: auto;
+  height:auto;
 }
