--- a/code/style.css
+++ b/code/style.css
@@ -8,8 +8,234 @@
   list-style: none;
 }
 
+.toggle-visibility {
+  display: none;
+}
+
+a {
+  color: inherit;
+}
+a:hover {
+  text-decoration: underline;
+}
+a:visited {
+  color: inherit;
+}
+
 html {
-  background: rgba(233, 230, 230, 0);
+  background: #e9e6e600;
   color: black;
   font-family: "Inconsolata", monospace;
+  font-size: 16px;
+}
+
+header {
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 2rem;
+}
+
+header h2 {
+  font-size: 3rem;
+}
+nav {
+  width: 100%;
+  text-align: center;
+  padding: 4rem 0;
+}
+
+li {
+  padding-top: 1rem;
+}
+
+li a {
+  font-size: 2rem;
+}
+
+.main-news {
+  width: 100vw;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main-image {
+  width: 100%;
+}
+
+.main-news h1 {
+  font-size: 3rem;
+  padding: 1rem;
+}
+
+.main-news p {
+  padding: 0 2rem;
+}
+
+.box {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  border: 2px solid black;
+  box-shadow: 2px 2px #808080;
+  margin: 2rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #d9d9d9;
+}
+
+.box img {
+  width: 100%;
+}
+
+.box h2 {
+  text-align: center;
+  font-size: 3rem;
+  text-transform: capitalize;
+  padding-bottom: 1rem;
+}
+
+.box p {
+  padding: 0.8rem;
+  width: 100%;
+}
+
+.box button {
+}
+
+button {
+  all: unset;
+  background-color: #eb942d;
+  border-radius: 20px;
+  width: 10rem;
+  height: 4rem;
+  border: none;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-top: 1rem;
+}
+
+button:hover,
+button:focus,
+button:target {
+  background-color: #ebab5c;
+  outline: solid 2px black;
+  cursor: pointer;
+}
+
+.fun-facts {
+  width: 100%;
+}
+
+.fun-facts img {
+  width: 100%;
+  height: 100%;
+}
+footer {
+  background-color: black;
+  color: white;
+  font-size: 2rem;
+  height: 15rem;
+  text-align: center;
+
+  padding-top: 5rem;
+}
+
+footer p {
+  padding-top: 1rem;
+  font-size: 3rem;
+}
+
+@media screen and (min-width: 680px) {
+  h1 {
+    width: 100%;
+  }
+  nav {
+    width: auto;
+    padding: 1rem;
+  }
+  ul {
+    display: flex;
+    flex-direction: row;
+  }
+
+  li {
+    padding: 0 2rem;
+  }
+  li a {
+    font-size: 1rem;
+  }
+
+  .toggle-nav {
+    display: none;
+  }
+
+  .toggle-visibility {
+    display: block;
+  }
+
+  .news-headlines {
+    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 0;
+  }
+
+  .box {
+    margin: 1rem;
+  }
+
+  .fun-facts,
+  .item,
+  .item p,
+  .item img {
+    margin: 1rem 0;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  header h2 {
+    padding-left: 3rem;
+  }
+
+  .news-headlines {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: none;
+  }
+
+  .news-headlines img {
+    max-width: 250px;
+  }
+
+  .fun-facts {
+    margin-top: 5rem;
+  }
+
+  .item {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+
+  .item p {
+    width: 40%;
+  }
+  .item img {
+    width: 40%;
+    max-width: 450px;
+  }
+
+  .item p {
+    width: 40%;
+  }
+
+  .item-b {
+    flex-direction: row-reverse;
+  }
 }
