--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,281 @@
 html {
-  background: #0025ff;
+  background: #f0f0f3;
   color: #fff;
 }
+
+.grid_header{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 10px;
+  padding: 10px;
+  background-color: #fff;
+  box-sizing: border-box;
+  height: 180px;
+  width: 100%;
+}
+
+.grid_header > div{
+  background-color: white;
+  padding: left;
+}
+
+.image{
+  grid-column: 1 / 2;
+  justify-self: end;
+  align-self: end;
+}
+
+.header{
+  grid-column: 2 / 4;
+  justify-self: start;
+  align-self: center;
+}
+
+.nav_bar{
+  grid-column: 4 / 6 ;
+  justify-self: end;
+  align-self: center;
+}
+
+.grid_header img{
+  float: left;
+  color: black;
+  margin: 20px;
+  padding: 10px;
+}
+
+.grid_header h1{
+  position: relative;
+  top: 18px;
+  left: 10px;
+  color: #111;
+  font-size: 48px;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  letter-spacing: -1px;
+  line-height: 1; 
+  text-align: start;
+  margin: 10px;
+  padding: 10px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 30px;
+  padding: 0;
+  color: black;
+}
+
+li {
+  float: left;
+  color: black;
+  font-size: 25px;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  letter-spacing: -1px;
+  text-align: start;
+}
+
+li a {
+  display: block;  /* Allows us to specify padding (and height, width, margins, etc */
+  padding: 8px;
+}
+
+/* responsive design - will automatically display the navbar*/
+
+@media screen and (max-width: 667px) {
+  .navbar a {
+    float: none;
+    display: block;
+  }
+}
+
+/* IN THIS PART IS EVERYTHING TO DO WITH THE BIG NEWS CONTENT */
+.grid_container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(120px,auto);
+  background-color: rgb(189, 189, 0);
+  align-items: center;
+  column-gap: 10px;
+}
+
+img{
+  grid-column-start: auto;
+  max-width: 60%;
+  max-height: 60%;
+  padding-left: 10px;
+}
+
+.big-news img.rounded-corners{
+  border-radius: 10%;
+}
+
+.text{
+  font-size: 70%;
+  color: #111;
+  padding: 10px;
+  text-align: center;
+}
+
+
+
+/* THE OTHER NEWS */
+:root{
+  --background-dark: #2d3548;
+  --text-light: rgba(255,255,255,0.6);
+  --text-lighter: rgba(255,255,255,0.9);
+  --spacing-s: 8px;
+  --spacing-m: 16px;
+  --spacing-l: 24px;
+  --spacing-xl: 32px;
+  --spacing-xxl: 64px;
+  --width-container: 1200px;
+}
+
+*{
+  border: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html{
+  height: 100%;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+}
+
+body{
+  height: 100%;
+}
+
+.hero-section{
+  align-items: flex-start;
+  background-image: linear-gradient(15deg, #0f4667 0%, #2a6973 150%);
+  display: flex;
+  min-height: 100%;
+  justify-content: center;
+  padding: var(--spacing-xxl) var(--spacing-l);
+}
+
+.card-grid{
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-column-gap: var(--spacing-l);
+  grid-row-gap: var(--spacing-l);
+  max-width: var(--width-container);
+  width: 100%;
+}
+
+@media(min-width: 540px){
+  .card-grid{
+    grid-template-columns: repeat(2, 1fr); 
+  }
+}
+
+@media(min-width: 960px){
+  .card-grid{
+    grid-template-columns: repeat(4, 1fr); 
+  }
+}
+
+.card{
+  list-style: none;
+  position: relative;
+}
+
+.card:before{
+  content: '';
+  display: block;
+  padding-bottom: 150%;
+  width: 100%;
+}
+
+.card__background{
+  background-size: cover;
+  background-position: center;
+  border-radius: var(--spacing-l);
+  bottom: 0;
+  filter: brightness(0.75) saturate(1.2) contrast(0.85);
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform-origin: center;
+  trsnsform: scale(1) translateZ(0);
+  transition: 
+    filter 200ms linear,
+    transform 200ms linear;
+}
+
+.card:hover .card__background{
+  transform: scale(1.05) translateZ(0);
+}
+
+.card-grid:hover > .card:not(:hover) .card__background{
+  filter: brightness(0.5) saturate(0) contrast(1.2) blur(20px);
+}
+
+.card__content{
+  left: 0;
+  padding: var(--spacing-l);
+  position: absolute;
+  top: 0;
+}
+
+.card__category{
+  color: rgb(255, 255, 255);
+  font-size: 0.9rem;
+  margin-bottom: var(--spacing-s);
+  text-transform: uppercase;
+}
+
+.card__heading{
+  color: var(--text-lighter);
+  font-size: 1.5rem;
+  text-shadow: 2px 2px 20px rgba(0,0,0,0.2);
+  line-height: 1.4;
+  padding: 20px;
+}
+
+
+/* media */
+
+/* On screens  668>1024, go from four columns to two columns */
+@media screen and (max-width: 1024px) and (min-width: 668px) {
+  .hero-section {
+    width: 50%;
+  }
+}
+
+/* On screens < 600px stack columns on top of each other. */
+
+@media screen and (max-width: 667px) {
+  .hero-section {
+    width: 100%;
+  }
+}
+
+
+/* nav bar not displayed on phone screen */
+@media screen and (max-width: 667px) {
+  .nav_bar {
+     display:none;
+  }
+}
+
+@media screen and (max-width: 667px) {
+  .header {
+     font-size: 10%;
+  }
+}
+
+/* site name not displayed on tablet screen only. */
+@media screen and (max-width: 1024px) and (min-width: 668px) {
+  .header {
+     display:none;
+  }
+}
+
