--- a/code/style.css
+++ b/code/style.css
@@ -6,7 +6,7 @@ html {
 
 *{
   box-sizing: border-box;
-  font-family: 'Playfair Display', serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-decoration: none;
 }
 
@@ -37,7 +37,7 @@ h1 {
 .logo{
   font-size:30px;
   padding-left: 0px;
-  padding-right: 900px;
+ 
   text-align: left;
     
   
@@ -75,7 +75,7 @@ h1 {
   background-color: black;
   padding: 1em 0;
   position:absolute;
-  display:none;
+  display:none; 
   border-radius: 8px;
   top:35px;
 
@@ -110,7 +110,7 @@ h1 {
   user-select:none;
 }
 
-@media (max-width: 768px){
+@media (max-width: 1024px){
   .menu{
     display:none;
     position:absolute;
@@ -180,18 +180,13 @@ h1 {
 
 
 .big-news-title {
-  color:red;
-  font-size: 70px;
+  
+  font-size: 60px;
   position: absolute;
   grid-column-start: 1;
   grid-column-end: span 1;
   align-self: end;
-  
-  
-  
-  
-  
-  
+  margin-left: 25px;
   
 }
 
@@ -270,21 +265,24 @@ h1 {
 }
 
 .news-item-image{
-  width: 350px;
+  /* width: 350px;
+  height: 350px; */
+  width:100%;
   height: 350px;
+
   object-fit: cover;       
 }
 
 .news-item-caption{
-  font-size: 28px;
-  width: 350px;
+  font-size: 25px;
+  width: 100%;
   overflow:hidden;
   font-weight:bold;
 }
 
 .news-item-text{
-  width:350px;
-  font-size: 25px;
+  width:100%;
+  font-size: 20px;
   margin-top: 10px;
 }
 
@@ -299,26 +297,60 @@ h1 {
 
 
 
-/*tablet*/
-/* @media (min-width: 667px) and (max-width: 1024px) {
-  .main-heading {
+/* tablet */
+@media (min-width: 667px) and (max-width: 1024px) {
+  .news-grid {
     color: red;
+    grid-template-columns: 50% 50%;
+    
   }
-} */
 
-/*desktop*/
+  .big-news-box a, .grid-container{
+    margin: 50px;
+  }
+
+  .big-news-title{
+    font-size: 55px;
+  }
+
+}
+
+/*mobile*/
+@media (max-width:666px){  
+  .news-grid{
+    grid-template-columns: 100%;
+  }
+
+  .big-news-box a, .grid-container{
+    margin: 50px;
+  }
+
+  .news-item-text{
+    display: none;
+    
+  }
+
+  .big-news-title{
+    font-size: 55px;
+  }
+
+  .big-news-image{
+    width:100%; 
+    height:800px;
+    grid-column-start: 1;
+    grid-column-end: span 1;
+   
+  }
+}
+
+/* desktop */
 /* @media (min-width: 1025px) {
-  .main-heading {
-    color: black;
+  .news-grid {
+    color: green;
+
+
   }
 }                */
 
 
-  /* @media(max-width: 1140px) {
-    grid-template-columns: repeat(2, 1fr);
-}
-
-  @media(max-width: 768px) {
-  grid-template-columns: repeat(1, 1fr);
-}
-   */
+  
