--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,308 @@
 html {
-  background: #0025ff;
+  background: #FF879F;
   color: #fff;
+}
+
+ul {
+  list-style-type: none;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #FEC78D;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+li {
+  float: left;
+  border-right: 1px solid #FEC78D;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #FF879F (black) on hover */
+li a:hover {
+  background-color: #FF879F;
+}
+
+li:last-child {
+  border-right: none;
+}
+
+.nav-container {
+  border: none;
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(4, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(4, 1fr));
+  background-color: #ef983a;
+}
+
+.top-navbar {
+  grid-column: span 4;
+}
+
+.header-image {
+  display: grid;
+  padding-left: 10px;
+}
+
+.date-stamp {
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgba(238, 238, 229, 0.974);
+  text-align: right;
+}
+
+.top-text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: small;
+  grid-column: 3 / 5;
+}
+
+.header-logo {
+  max-width: 75px;
+  max-height: 75px;
+  grid-column: 1 / 2;
+}
+
+.big-news-section{
+  font-family: Arial, Helvetica, sans-serif;
+  width: auto;
+  height: auto; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+  }
+
+  .stor-nyhet{
+    width: 500px;
+    height: auto;
+    margin: 20px 0px 20px 0px;
+  }
+
+  .nyhet-bild img{
+  display: block;
+  height: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 75%;
+  width: 75%
+  }
+
+  .nyhet-text{
+  background-color: #6FD7A3;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  padding: 10px;
+  }
+
+.tiny-news-wrapper {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(FEC78D, 244, 220);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.tiny-news {
+  margin: 8px 35px;
+  height: 350px;
+  width: 500px;
+  background: #FEC78D;
+  padding: 8px;
+  font-size: 16px bold;
+}
+
+.tiny-news-image {
+  width: 100%;
+  height: 83%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.tiny-news a {
+  text-decoration: none;
+}
+
+.tiny-news img:hover {
+  text-decoration: none;
+  font-size: 14px;
+  transition-duration: 0.3s;
+}
+
+/* --- MEDIA QUERIES --- */
+
+/* TABLET */
+
+@media (min-width: 668px) and (max-width: 1024px) {
+
+  .text h1 {
+    font-size: 32px;
+    padding: 20px 20px 20px 70px;
+    display: grid;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgba(220, 221, 213, 0.974);
+  }
+
+  .big-news-section {
+    font-family: Arial, Helvetica, sans-serif;
+    background: rgb(244, 244, 220);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .stor-nyhet {
+    max-width: 45%;
+  }
+
+  .nyhet-bild img {
+    max-width: 100%;
+    height: 300px;
+  }
+
+  .nyhet-bild {
+    min-height: 250px;
+  }
+
+  .nyhet-text {
+    min-height: 300px;
+  }
+
+  .tiny-news-wrapper {
+    display: flex;
+    flex-direction: row;
+    padding: 2px;
+    column-gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .tiny-news {
+    margin: 5px;
+    max-width: 35%;
+    margin: 9px 2px;
+    padding: 8px;
+  }
+
+  .tiny-news-image {
+    width: 100%;
+    height: 75%;
+  }
+
+  .tiny-news a {
+    font-size: 14px;
+  }
+
+  .tiny-news:hover {
+    background-color: silver;
+  }
+}
+
+/* DESKTOP */
+
+@media (min-width: 1025px) {
+  .text h1 {
+    font-size: 35px;
+    display: grid;
+    color: rgba(220, 221, 213, 0.974);
+    padding: 20px 40px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .navbar {
+    min-width: 1025px;
+    max-width: auto;
+    justify-content: right;
+    align-items: flex-end;
+    grid-column: span 1;
+    background-color: #FEC78D;
+  }
+
+  .image {
+    grid-column: span 1;
+  }
+
+  .text {
+    grid-column: span 1;
+  }
+
+  .big-news-section {
+    font-family: Arial, Helvetica, sans-serif;
+    background: rgb(244, 244, 220);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding-left: 10px;
+  }
+
+  .stor-nyhet {
+    min-width: 47%;
+    font-size: 15px;
+  }
+
+  .nyhet-bild img {
+    max-width: 100%;
+    height: 350px;
+  }
+
+  .nyhet-bild {
+    min-height: 350px;
+    max-width: 500px;
+  }
+
+  .nyhet-text {
+    height: 340px;
+    max-width: 500px;
+  }
+
+  .tiny-news-wrapper {
+    display: flex;
+    flex-direction: row;
+    padding: 2px;
+    column-gap: 8px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .tiny-news {
+    margin: 5px;
+    max-width: 21%;
+    padding: 7px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .tiny-news-image {
+    width: 100%;
+    height: 60%;
+  }
+
+  .tiny-news img {
+    font-size: medium;
+  }
+
+  .tiny-news:hover {
+    background-color: gold;
+  }
 }
