--- a/code/style.css
+++ b/code/style.css
@@ -6,7 +6,7 @@ html {
 
 *{
   box-sizing: border-box;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   text-decoration: none;
 }
 
@@ -24,7 +24,7 @@ h1 {
   padding: 20px;
   background-color:black;
   color:white;   
-  height:100px;
+  height:80px;
   
 }
 
@@ -32,22 +32,33 @@ h1 {
 .nav-links a{
   color:white;
   text-decoration: none;
+  
+}
+
+.logo-container{
+  display: flex;
+  justify-content: left;
 }
 
 .logo{
-  font-size:30px;
+  font-size:20px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   padding-left: 0px;
- 
+  margin-left: 20px;
   text-align: left;
-    
+  align-self: center;
+  
   
 }
 
 .logo-image{
   width:auto;
-  height: 100px;
+  height: 80px;
   margin-left: 0px;
+ 
 }
+
+
 
 .menu{
   display: flex;
@@ -77,7 +88,8 @@ h1 {
   position:absolute;
   display:none; 
   border-radius: 8px;
-  top:35px;
+  top:50px;
+  z-index: 999;
 
 }
 
@@ -136,9 +148,14 @@ h1 {
   }
   .dropdown{
     left: 50%;
-    top: 30px;
-    transform: translateX(20%);
+    top: 30px;    
+    transform: translateX(20%); 
+   
+  }  
 
+  .navbar{
+    position: relative;
+    z-index: 999;
   }
 
   #searchbar{
@@ -158,15 +175,15 @@ h1 {
 .big-news-box a{
   display:grid;
   grid-template-columns: repeat(2, 1fr);
-  margin: 50px 200px;
-  /* align-items: center;
-  justify-items: center; */
-  /* background-color: black; */
+  margin: 50px 300px;
   height: 800px;
-  
-  
   position: relative;
     
+}
+
+.big-news-box a:visited{
+  text-decoration: none;
+  color:whitesmoke;
 }
 
 .big-news-image{
@@ -190,6 +207,8 @@ h1 {
   
 }
 
+
+
 .subheading{
   display: flex;
   align-items: center;
@@ -209,7 +228,7 @@ h1 {
   
  .grid-container{
   display: grid;
-  margin: 100px 200px; 
+  margin: 100px 300px; 
   
   
  }
@@ -219,11 +238,10 @@ h1 {
   grid-template-columns: 25% 25% 25% 25%;
   margin: 80px 0px;
   justify-content: space-evenly;
-  column-gap: 10px;
+  column-gap: 30px;
   
   
 }
-  
 
 
 
@@ -248,6 +266,11 @@ h1 {
   
 }
 
+.news-item a:visited{
+  text-decoration: none;
+  color:black;
+}
+
 .grid-container:hover {
   border: 1px solid red; 
 }
@@ -265,8 +288,6 @@ h1 {
 }
 
 .news-item-image{
-  /* width: 350px;
-  height: 350px; */
   width:100%;
   height: 350px;
 
@@ -321,36 +342,40 @@ h1 {
     grid-template-columns: 100%;
   }
 
-  .big-news-box a, .grid-container{
+  .big-news-box a{
     margin: 50px;
+    background-color: black;
   }
 
+  .grid-container{
+    margin: 50px;
+    
+  }
   .news-item-text{
     display: none;
     
   }
 
   .big-news-title{
-    font-size: 55px;
+    font-size: 45px;
+    grid-column-start: 1;
+    grid-column-end: span 2;
+    
   }
 
   .big-news-image{
     width:100%; 
-    height:800px;
+    height:500px;
     grid-column-start: 1;
-    grid-column-end: span 1;
+    grid-column-end: span 2;
+    
    
   }
 }
 
-/* desktop */
-/* @media (min-width: 1025px) {
-  .news-grid {
-    color: green;
 
 
-  }
-}                */
+            
 
 
   
