--- a/style.css
+++ b/style.css
@@ -23,31 +23,30 @@ a {
   text-align: center;
   padding: 5px;
 }
-.topnav a:hover {
+
+a:hover {
   color: aliceblue;
 }
 
+.body {
+  margin: 0;
+}
+
 .big-news {
-  padding: 20px;
   display:flex;
-  align-items:center;
+  align-items: center;
+  justify-content: center;
+  color: aliceblue;
+  padding: 30px;
 }
 
 .big-news img {
-  width: 60%;
-  border-radius: 20px;
-}
-
-.top-news-pic {
-  flex: 1;
-}
-
-.top-news {
-  color:aliceblue;
   padding: 20px;
+  width: 50%;
+  border-radius: 30px;
 }
 
-.top-news button {
+.big-news button {
   border:aliceblue;
   border-radius:20px;
   padding: 15px;
@@ -57,7 +56,24 @@ a {
   font-weight: bold;
 }
 
-.top-news button:hover {
+.big-news button:hover {
 background-color: #003366;
 color:aliceblue;
+}
+
+.grid-parent {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 20px;
+  margin: 30px;
+  color:aliceblue;
+}
+
+.grid-parent img {
+  width: 100%;
+  border-radius: 0 30px 0 30px;
+}
+
+.grid-item {
+  padding: 10px;
 }
