--- a/code/style.css
+++ b/code/style.css
@@ -52,4 +52,52 @@ a {
   text-decoration: none;
 }
 
+.big-news {
+  height: 400px;
+  margin-top: 10px;
+  padding: 5px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column-reverse;
 
+}
+.main-text {
+  max-width: 345px;
+  max-height: 300px;
+  width: auto;
+  height: auto;
+  text-align: left;
+  padding-bottom: 10px;
+}
+h2 {
+  text-align: center;
+}
+
+.big-news img {
+  max-width: 400px;
+  max-height: 200px;
+  width: auto;
+  height: auto;
+  padding: 10px;
+
+}
+
+.info-boxes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 5px solid black;
+}
+.info-boxes div {
+  width: 80%;
+  background-color: #87A5F7;
+  border: 2px solid #275DF1;
+  margin: 5px;
+}
+.info-boxes img {
+  max-width: 300px;
+  max-height: 150px;
+  width: auto;
+  height: auto;
+}
