--- a/code/style.css
+++ b/code/style.css
@@ -59,7 +59,6 @@ nav {
 
 
 h1 {
-  font-family: 'Josefin Sans', sans-serif;
   font-style: italic;
   font-size: 24px;
   font-weight: lighter;
@@ -75,7 +74,7 @@ h1 {
 
 
 /* from old */
-@media (min-width: 668px) and (max-width: 1024px) {
+@media (min-width: 668px) {
   body{
       flex-direction: row;
       background: peru;
@@ -85,6 +84,12 @@ h1 {
       width: 40%;
   }
 
+  .navbar {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
   .nav-links {
     display: flex;
     align-items: flex-end;
@@ -92,6 +97,13 @@ h1 {
     text-transform: uppercase;
     font-size: 13px;
     font-weight: 300;
+  }
+  
+  .nav-item a {
+    display: inline-block;
+    padding: 10px 10px 0 10px;
+    text-decoration: none;
+    color: #000;
   }
 }
 
