--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,108 @@ html {
   background: #0025ff;
   color: #fff;
 }
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+  border: solid white;
+}
+
+.title{
+  margin: 0;
+  flex-shrink: 0;
+  margin-left: 25px;
+}
+
+.flex-container{
+  display: flex ;
+  align-items: center;
+}
+
+.box-1-header img{
+  max-height: 50px;
+}
+
+.link{
+  margin-left: 16px;
+  padding-block-end: 1 fr;
+}
+
+.big-news{
+  padding: 20px;
+  margin-top: 30px;
+  border: solid orange;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.big-news-img{
+  border: solid white;
+  height: 250px;
+}
+
+.big-news-title{
+  border: solid white;
+}
+
+.big-news-text{
+  border: solid white;
+}
+
+.big-news-button{
+  border: solid white;
+}
+
+.grid-container-other-news{ 
+  margin-top: 30px;
+  padding: 15px;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 10px;
+
+}
+
+.other-news-articles{
+border: solid white;
+
+
+}
+
+.flex-container-footer{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  border: solid white;
+  
+}
+
+.link-footer{
+  margin: 15px;
+  text-decoration: none;
+  font-size: 28px;
+}
+
+
+
+@media (min-width:667px) and (max-width:1024px){
+  .title{
+    margin: 12px;
+  }
+
+  .grid-container-other-news{
+    grid-template-columns: repeat(2, 1fr);
+  }
+   
+  }
+
+@media (min-width: 1025px) {
+  .title {
+    margin: 16px;
+  }
+
+  .grid-container-other-news{
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
