--- a/code/style.css
+++ b/code/style.css
@@ -6,7 +6,7 @@ html {
 .header{
   display: flex;
   justify-content: space-between;
-  padding-top: 10px;
+  padding: 15px;
   border: solid white;
 }
 
@@ -27,21 +27,25 @@ html {
 
 .link{
   margin-left: 16px;
-  padding-block-end: 1 fr;
 }
 
 .big-news{
-  padding: 20px;
   margin-top: 30px;
   border: solid orange;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .big-news-img{
   border: solid white;
-  height: 250px;
+  width: 100%;
+}
+
+.big-news-head-text{
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: -100px;
+
 }
 
 .big-news-title{
@@ -60,7 +64,7 @@ html {
   margin-top: 30px;
   padding: 15px;
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: 1fr;
   gap: 10px;
 
 }
@@ -87,10 +91,8 @@ border: solid white;
 
 
 
-@media (min-width:667px) and (max-width:1024px){
-  .title{
-    margin: 12px;
-  }
+@media (min-width:667px){
+
 
   .grid-container-other-news{
     grid-template-columns: repeat(2, 1fr);
@@ -99,11 +101,7 @@ border: solid white;
   }
 
 @media (min-width: 1025px) {
-  .title {
-    margin: 16px;
-  }
-
-  .grid-container-other-news{
+   .grid-container-other-news{
     grid-template-columns: repeat(3, 1fr);
   }
 }
