--- a/code/style.css
+++ b/code/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .logo {
-  width: 300px;
+  width: auto;
   height: auto;
 }
 
@@ -36,6 +36,7 @@ body {
 
 .nav-bar a:hover {
   color: coral;
+  font-weight: bold;
 }
 
 .menu {
@@ -110,12 +111,11 @@ body {
   padding: 10px 20px;
   margin: auto;
   border-radius: 20px;
-  color: white;
   text-decoration: none;
 }
 
 .headline button a {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
@@ -200,11 +200,10 @@ body {
 .main-footer {
   text-align: center;
   background: coral;
-  margin-top: 5%;
-  padding-top: 5px;
-  padding-bottom: 5px;
   color: black;
   font-size: 10px;
+  padding: 5px;
+  margin: 5px;
 }
 
 .main-footer a {
