--- a/code/style.css
+++ b/code/style.css
@@ -24,6 +24,27 @@
   font-weight: bold;
 }
 
+h1 {
+  text-align: center;
+}
+
+.flex-parent-big-news {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex-child-big-news {
+  display: block;
+}
+
+.img-big-news {
+  height: 50%;
+  max-width: 50%;
+}
+
 /*.link {
   color: var(--primary-text-color);
   transition: all 200ms ease;
