--- a/code/style.css
+++ b/code/style.css
@@ -53,33 +53,37 @@ a {
 }
 
 .big-news {
-  height: 400px;
   margin-top: 10px;
   padding: 5px;
   display: flex;
   justify-content: start;
   align-items: center;
   flex-direction: column-reverse;
+  border-bottom: #275DF1 solid 5px;
 
 }
 .main-text {
-  max-width: 345px;
-  max-height: 300px;
+  max-width: 80%;
   width: auto;
   height: auto;
   text-align: left;
   padding-bottom: 10px;
+  color:#0D1837;
 }
 h2 {
   text-align: center;
 }
 
+.main-text p {
+  text-align: center;
+  font-size: 13px;
+}
+
 .big-news img {
-  max-width: 400px;
-  max-height: 200px;
+  max-width: 100%;
   width: auto;
   height: auto;
-  padding: 10px;
+  padding: 10px 0px;
 
 }
 
@@ -87,17 +91,50 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 5px solid black;
 }
-.info-boxes div {
-  width: 80%;
-  background-color: #87A5F7;
-  border: 2px solid #275DF1;
+
+.info-boxes h3 {
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 20px;
+}
+
+.info-boxes p {
+  color: #87A5F7;
+  text-align: center;
+  font-size: 15px;
+}
+
+.box  {
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: start;
+  align-items: center;
   margin: 5px;
+  border-bottom: #275DF1 solid 5px;
 }
+
 .info-boxes img {
-  max-width: 300px;
-  max-height: 150px;
+  max-width: 100%;
+  max-height: 100%;
   width: auto;
   height: auto;
+  padding: 2px;
 }
+
+.text-in-fatbox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 2px solid #0D1837;
+  flex: 1 0 40%;
+  background-color:#0D1837;
+}
+
+.image-box {
+  flex: 1 0 60%;
+  display: flex;
+  align-items: center;
+}
+
