--- a/code/style.css
+++ b/code/style.css
@@ -72,16 +72,18 @@ body {
   .grid-other-news {
   }
 
+  /*Header: basic styiling*/
   header {
     padding: 20px;
     display: flex;
     justify-content: space-between;
   }
-
+  /*Remove decorations that make the link look like links*/
   header a {
     text-decoration: none;
   }
 
+  /*company-name text styling, should be changed to logo later*/
   .company-name{
     font-weight: bold;
     font-size: 30px;
@@ -89,13 +91,14 @@ body {
     display: flex;
     align-items: center;
   }
-
+/*company-name text color*/
   .company-name a {
     color:rgb(0, 146, 114);
   }
 
+  /* Påbörjan av styling nav-bar*/
   .nav-bar{
-    
+
   }
 }
 
